# launcher-meta

./: .gitignore  README.md  asset_composer.py  cache.py  cid_db.json  cid_db_updater.py  get_hash.py  manifest_composer.py  metrics.py  pyproject.toml
.github/workflows/: cache.yml  metrics.yml  update_vanilla.yml
indexes/: 1.12.2.json  1.16.5.json  1.19.3.json
net.minecraft/: 1.0.json  1.1.json  1.10-pre1.json  1.10-pre2.json  1.10.1.json  1.10.2.json  1.10.json  1.11-pre1.json  1.11.1.json  1.11.2.json  1.11.json  1.12-pre1.json  1.12-pre2.json  1.12-pre3.json  1.12-pre4.json  1.12-pre5.json  1.12-pre6.json  1.12-pre7.json  1.12.1-pre1.json  1.12.1.json  1.12.2-pre1.json  1.12.2-pre2.json  1.12.2.json  1.12.json  1.13-pre1.json  1.13-pre10.json  1.13-pre2.json  1.13-pre3.json  1.13-pre4.json  1.13-pre5.json  1.13-pre6.json  1.13-pre7.json  1.13-pre8.json  1.13-pre9.json  1.13.1-pre1.json  1.13.1-pre2.json  1.13.1.json  1.13.2-pre1.json  1.13.2-pre2.json  1.13.2.json  (+788 more)
